# i2w

./: .gitignore  README.md  pyproject.toml
sample/: i2w2.py
scripts/: create_dev_venv  mrproper
src/i2w/: __init__.py  _constants.py  _converter.py  _illion.py  _localization.py  _logging.py  _types.py  cli.py  converter.py  exception.py  logging.py
tests/: __init__.py  test_converter.py  test_illion.py
